-Closed open classloader if there's an exception -Added reporting of exception